<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="100">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/prompt_title"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtCom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTitle"
        android:layout_alignStart="@id/txtTitle"
        android:layout_marginBottom="10dp"
        android:text="@string/prompt_com_play"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtMyPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTitle"
        android:layout_alignEnd="@id/txtTitle"
        android:layout_marginBottom="10dp"
        android:text="@string/prompt_my_play"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/imgBtnScissorsRight"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_below="@id/txtMyPlay"
        android:layout_alignEnd="@id/txtMyPlay"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:contentDescription="@string/myPlay"
        android:onClick="pressScissors"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/scissors_right" />

    <ImageButton
        android:id="@+id/imgBtnRockRight"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_below="@id/imgBtnScissorsRight"
        android:layout_alignEnd="@id/txtMyPlay"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:contentDescription="@string/myPlay"
        android:onClick="pressRock"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/rock_right" />

    <ImageButton
        android:id="@+id/imgBtnPaperRight"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_below="@id/imgBtnRockRight"
        android:layout_alignEnd="@id/txtMyPlay"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:contentDescription="@string/myPlay"
        android:onClick="pressPaper"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/paper_right" />

    <ImageView
        android:id="@+id/imgViewPaperLeft"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_below="@id/imgBtnScissorsRight"
        android:layout_alignStart="@id/txtCom"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/comPlay"
        app:srcCompat="@drawable/paper_left" />

    <TextView
        android:id="@+id/calcWin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgBtnPaperRight"
        android:layout_alignStart="@id/txtCom"
        android:layout_marginTop="30dp"
        android:text="@string/win"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/calcTie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgBtnPaperRight"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="50dp"
        android:layout_toEndOf="@+id/calcWin"
        android:layout_toRightOf="@+id/calcWin"
        android:text="@string/tie"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/calcLose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgBtnPaperRight"
        android:layout_alignEnd="@id/txtMyPlay"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:text="@string/lose"
        android:textSize="20sp" />


</RelativeLayout>
